portable xray system

--- a/patient_analytics_solutions/brain_ct_ai_analytic.html
+++ b/patient_analytics_solutions/brain_ct_ai_analytic.html
@@ -138,43 +138,43 @@
           </div>
         </div>
         <div class="col-12 col-sm-6">
-          <h2 class="mb-3 fw-bold" style="color:#294076">Brain CT AI Analytic</h2>
+          <h2 class="mb-3 fw-bold " style="color:#294076">Brain CT AI Analytic</h2>
           <div class="px-4" style="color:#595857">
-            <p class="textIndent"><i class="bi bi-caret-right-fill fs-6 "></i>Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill fs-6"></i>Professional DICOM viewer enables doctors to view the CT images with the Al-marking.</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill fs-6"></i>Provides multiple ways to integrate with the hospital’s system, sending out notification in a timely manner.</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Professional DICOM viewer enables doctors to view the CT images with the Al-marking.</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provides multiple ways to integrate with the hospital’s system, sending out notification in a timely manner.</p>
           </div>
         </div>
       </div>
       <div class="py-5" style="background-color: #2940760c;border-radius: 12px;">
         <div class="row">
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold">AnayIsis Report</h3>
+            <h3 class="h-color-bk80 fw-bold fs-5">AnayIsis Report</h3>
             <p class="p-color-bk80">Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold">Professional DICOM Viewer</h3>
+            <h3 class="h-color-bk80 fw-bold fs-5">Professional DICOM Viewer</h3>
             <p class="p-color-bk80">Professional DICOM viewer enables doctors to view the CT images with the Al-marking and grasp a more comprehensive understanding of their patients.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold">Notification</h3>
+            <h3 class="h-color-bk80 fw-bold fs-5">Notification</h3>
             <p class="p-color-bk80">Provides multiple ways to integrate with the hospital's system, sending out notification in a timely manner.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold">Prioritization</h3>
+            <h3 class="h-color-bk80 fw-bold fs-5">Prioritization</h3>
             <p class="p-color-bk80">Automatically prioritizes patient list by the severity of their conditions and alerts the physicians for acute care.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold">ICH Detection and Quantification</h3>
+            <h3 class="h-color-bk80 fw-bold fs-5">ICH Detection and Quantification</h3>
             <p class="p-color-bk80">Brain CT AI Analytic is able to identify intracranial hemorrhage with less than 1 cc within 30 secs along with ICH subtypes and regions.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold">Other Critical Detection and Quantification</h3>
+            <h3 class="h-color-bk80 fw-bold fs-5">Other Critical Detection and Quantification</h3>
             <p class="p-color-bk80">Brain CT AI Analytic provides additional information as midline shift, Ischemic Stroke, ICH Score and Skull/facial fracture to further support physicians.</p>
           </div>
         </div>
