Pediatric Bone Age X-ray System Page

--- a/patient_analytics_solutions/Portable_X-ray_System.html
+++ b/patient_analytics_solutions/Portable_X-ray_System.html
@@ -37,7 +37,7 @@
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 2">
       <a class="navbar-brand" href="../index.html"> <img src="../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -105,22 +105,22 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Brain_CT_AI_Analysis.webp');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-01.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('https://swiperjs.com/demos/images/nature-2.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-02.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('https://swiperjs.com/demos/images/nature-3.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-03.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('https://swiperjs.com/demos/images/nature-4.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-04.jpg');"></div>
                 </div>
               </div>
             </div>
@@ -131,51 +131,57 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Brain_CT_AI_Analysis.webp');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-01.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-02.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-03.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-04.jpg');"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6">
-          <h2 class="mb-3 fw-bold " style="color:#294076">Brain CT AI Analytic</h2>
+          <h2 class="mb-3 fw-bold " style="color:#294076">Portable X-ray System</h2>
           <div class="px-4" style="color:#595857">
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Professional DICOM viewer enables doctors to view the CT images with the Al-marking.</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provides multiple ways to integrate with the hospital’s system, sending out notification in a timely manner.</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Lower Dose</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Easy to Carry</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>All Kinds of Scenario</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>CNT X-ray Tube</p>
           </div>
         </div>
       </div>
       <div class="py-5" style="background-color: #2940760c;border-radius: 12px;">
         <div class="row">
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">AnayIsis Report</h3>
-            <p class="p-color-bk80">Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">CNT X-ray Tube</h3>
+            <p class="p-color-bk80">Use Carbon nanotube (CNT) as cold cathode to replace the conventional heated filament</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Professional DICOM Viewer</h3>
-            <p class="p-color-bk80">Professional DICOM viewer enables doctors to view the CT images with the Al-marking and grasp a more comprehensive understanding of their patients.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Easy to Carry</h3>
+            <p class="p-color-bk80">Portable machine with optional bracket system.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Notification</h3>
-            <p class="p-color-bk80">Provides multiple ways to integrate with the hospital's system, sending out notification in a timely manner.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">All Kinds of Scenario</h3>
+            <p class="p-color-bk80">First extremities and chest screening on the market.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Prioritization</h3>
-            <p class="p-color-bk80">Automatically prioritizes patient list by the severity of their conditions and alerts the physicians for acute care.</p>
-          </div>
-          <div class="hrStyle-common mb-4"></div>
-          <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">ICH Detection and Quantification</h3>
-            <p class="p-color-bk80">Brain CT AI Analytic is able to identify intracranial hemorrhage with less than 1 cc within 30 secs along with ICH subtypes and regions.</p>
-          </div>
-          <div class="hrStyle-common mb-4"></div>
-          <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Other Critical Detection and Quantification</h3>
-            <p class="p-color-bk80">Brain CT AI Analytic provides additional information as midline shift, Ischemic Stroke, ICH Score and Skull/facial fracture to further support physicians.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Tele-medicine applicable</h3>
+            <!-- <p class="p-color-bk80">Provides multiple ways to integrate with the hospital's system, sending out notification in a timely manner.</p> -->
           </div>
         </div>
       </div>
