Pediatric_Bone_Age_X-ray_System Page

--- a/patient_analytics_solutions/Pediatric_Bone_Age X-ray_System.html
+++ b/patient_analytics_solutions/Pediatric_Bone_Age X-ray_System.html
@@ -101,26 +101,26 @@
     <div class="container-xxl" style="margin-bottom: 60px;">
       <div class="row mb-3">
         <div class="col-12 col-sm-6 mb-3">
-          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiper2">
+          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiper2 mb-3">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Brain_CT_AI_Analysis.webp');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-01.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('https://swiperjs.com/demos/images/nature-2.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-02.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('https://swiperjs.com/demos/images/nature-3.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-03.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('https://swiperjs.com/demos/images/nature-4.jpg');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-04.jpg');"></div>
                 </div>
               </div>
             </div>
@@ -131,51 +131,57 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Brain_CT_AI_Analysis.webp');"></div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-01.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-02.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-03.jpg');"></div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div>
+                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Pediatric_Bone_Age_X-ray_System-04.jpg');"></div>
                 </div>
               </div>
             </div>
           </div>
         </div>
         <div class="col-12 col-sm-6">
-          <h2 class="mb-3 fw-bold " style="color:#294076">Brain CT AI Analytic</h2>
+          <h2 class="mb-3 fw-bold " style="color:#294076">Pediatric Bone Age X-ray System</h2>
           <div class="px-4" style="color:#595857">
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Professional DICOM viewer enables doctors to view the CT images with the Al-marking.</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Provides multiple ways to integrate with the hospital’s system, sending out notification in a timely manner.</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Lower Dose</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Easy to Go</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Current Applications</p>
+            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Future Applications</p>
           </div>
         </div>
       </div>
       <div class="py-5" style="background-color: #2940760c;border-radius: 12px;">
         <div class="row">
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">AnayIsis Report</h3>
-            <p class="p-color-bk80">Provide a detailed analysis of critical findings on brain CT images to support physicians making clinical decisions.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Lower Dose</h3>
+            <p class="p-color-bk80">80% reduce the exposure of radiation.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Professional DICOM Viewer</h3>
-            <p class="p-color-bk80">Professional DICOM viewer enables doctors to view the CT images with the Al-marking and grasp a more comprehensive understanding of their patients.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Easy to Go</h3>
+            <p class="p-color-bk80">Close shielding protection can exposure anywhere.</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Notification</h3>
-            <p class="p-color-bk80">Provides multiple ways to integrate with the hospital's system, sending out notification in a timely manner.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Current Applications</h3>
+            <p class="p-color-bk80">BoneAge / Fracture</p>
           </div>
           <div class="hrStyle-common mb-4"></div>
           <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Prioritization</h3>
-            <p class="p-color-bk80">Automatically prioritizes patient list by the severity of their conditions and alerts the physicians for acute care.</p>
-          </div>
-          <div class="hrStyle-common mb-4"></div>
-          <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">ICH Detection and Quantification</h3>
-            <p class="p-color-bk80">Brain CT AI Analytic is able to identify intracranial hemorrhage with less than 1 cc within 30 secs along with ICH subtypes and regions.</p>
-          </div>
-          <div class="hrStyle-common mb-4"></div>
-          <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Other Critical Detection and Quantification</h3>
-            <p class="p-color-bk80">Brain CT AI Analytic provides additional information as midline shift, Ischemic Stroke, ICH Score and Skull/facial fracture to further support physicians.</p>
+            <h3 class="h-color-bk80 fw-bold fs-5">Future Applications</h3>
+            <p class="p-color-bk80">Bone Density / Gout</p>
           </div>
         </div>
       </div>
