--- a/patient_analytics_solutions/Portable_X-ray_System.html
+++ b/patient_analytics_solutions/Portable_X-ray_System.html
@@ -101,7 +101,7 @@
     <div class="container-xxl" style="margin-bottom: 60px;">
       <div class="row mb-3">
         <div class="col-12 col-sm-6 mb-3">
-          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiper2">
+          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiper2 mb-3">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
@@ -131,7 +131,7 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div>
-                  <div class="cardEquip" style="background-image: url('../images/medical-equipments/Portable_X-ray_System-01.jpg');"></div>
+                  <div class="cardEquip " style="background-image: url('../images/medical-equipments/Portable_X-ray_System-01.jpg');"></div>
                 </div>
               </div>
               <div class="swiper-slide">
