--- a/medical-equipments/patient_analytics_solutions/brain_ct_ai_analytic.html
+++ b/medical-equipments/patient_analytics_solutions/brain_ct_ai_analytic.html
@@ -172,7 +172,7 @@
       <div class="container-xxl">
         <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center border-bottom border-secondary p-3">
           <div class="mb-3 mb-lg-0 me-lg-3">
-            <img src="../images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
+            <img src="../../images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
           </div>
           <div class="d-flex flex-column">
             <div class="d-flex flex-column flex-lg-row">
