--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- 1212 navbar↓ -->
     <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary px-3  position-sticky top-0 shadow-sm" style="background-color: #fff;z-index: 3">
-      <a class="navbar-brand" href="./index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
+      <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -53,48 +53,48 @@
             <a class="nav-link px-3 active" aria-current="page" href="./index.html">Home</a>
           </li>
           <li class="nav-item nav-pills dropdown" style="color: #595857">
-            <a class="nav-link px-3  dropdown-toggle" href="./medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
+            <a class="nav-link px-3  dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Medical Devices And Equipments</p>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
               </li>
 
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Healthcare IT</p>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
                 <a class="dropdown-item fw-bold" style="color: #ff8500" href="#">Medical Supplies</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
               </li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-3" href="./about-us.html">About</a>
+            <a class="nav-link px-3" href="http://medalliance.com.tw/about-us.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link px-3" href="mailto:support@medalliance.com.tw">Contact Us</a>
