--- a/about-us.html
+++ b/about-us.html
@@ -37,30 +37,30 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item nav-pills">
-            <a class="nav-link px-3" aria-current="page" href="./index.html">Home</a>
+            <a class="nav-link px-3" aria-current="page" href="http://medalliance.com.tw/index.html">Home</a>
           </li>
           <li class="nav-item nav-pills dropdown" style="color: #595857">
-            <a class="nav-link px-3  dropdown-toggle" href="./medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
+            <a class="nav-link px-3  dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Medical Devices And Equipments</p>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Imaging_Solutions"><i class="bi bi-arrow-right-short"></i>Imaging Solutions</a>
               </li>
 
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Patient_Analytics_Solutions"><i class="bi bi-arrow-right-short"></i>Patient Analytics Solutions</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Healthcare IT</p>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Mobile_Nursing_Station"><i class="bi bi-arrow-right-short"></i>Mobile Nursing Station</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Base_Telescoping"><i class="bi bi-arrow-right-short"></i>Base Telescoping</a>
               </li>
               <li><hr class="dropdown-divider" /></li>
               <li>
@@ -70,18 +70,18 @@
                 <a class="dropdown-item" href="./medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Alcohol_Prep_Pads"><i class="bi bi-arrow-right-short"></i>Alcohol Prep Pads</a>
               </li>
               <li>
-                <a class="dropdown-item" href="./medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
+                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Personal_Protective_Equipment"><i class="bi bi-arrow-right-short"></i>Personal Protective Equipment</a>
               </li>
             </ul>
           </li>
           <li class="nav-item nav-pills">
-            <a class="nav-link px-3 active" href="./about-us.html">About</a>
+            <a class="nav-link px-3 active" href="http://medalliance.com.tw/about-us.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link px-3" href="mailto:support@medalliance.com.tw">Contact Us</a>
@@ -155,6 +155,7 @@
     <!-- footer↑  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  
     <script>
       AOS.init();
     </script>
