--- a/medical-equipments/imaging_solutions/handheld_ultrasound.html
+++ b/medical-equipments/imaging_solutions/handheld_ultrasound.html
@@ -46,6 +46,9 @@
           <li class="nav-item nav-pills">
             <a class="nav-link px-3" aria-current="page" href="http://medalliance.com.tw/index.html">Home</a>
           </li>
+          <li class="nav-item nav-pills">
+            <a class="nav-link px-3 " aria-current="page" href="http://medalliance.com.tw/telemedicine.html">Telemedicine</a>
+          </li>
           <li class="nav-item nav-pills dropdown" style="color: #595857">
             <a class="nav-link px-3 active dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
@@ -220,6 +223,5 @@
       });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
- 
   </body>
 </html>
