--- a/medical-equipments/imaging_solutions/portable_x-ray_system.html
+++ b/medical-equipments/imaging_solutions/portable_x-ray_system.html
@@ -46,6 +46,9 @@
           <li class="nav-item nav-pills">
             <a class="nav-link px-3" aria-current="page" href="http://medalliance.com.tw/index.html">Home</a>
           </li>
+          <li class="nav-item nav-pills">
+            <a class="nav-link px-3 " aria-current="page" href="http://medalliance.com.tw/telemedicine.html">Telemedicine</a>
+          </li>
           <li class="nav-item nav-pills dropdown" style="color: #595857">
             <a class="nav-link px-3 active dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
