--- a/telemedicine.html
+++ b/telemedicine.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="height: 100%">
+<html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-02NYWHSNJZ"></script>
@@ -18,25 +18,18 @@
     <meta property="og:image" content="http://medalliance.com.tw/images/medalliance-og.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:url" content="http://medalliance.com.tw/" />
-    <meta property="og:title" content="Medalliance - MedTech Services" />
-    <meta
-      property="og:description"
-      content="Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care."
-    /> -->
     <title>Medalliance - MedTech Services</title>
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="../../custom/all.css" />
-    <link rel="stylesheet" href="../../custom/equipments.css" />
+    <link rel="stylesheet" href="./custom/all.css" />
   </head>
 
   <body>
     <!-- 1212 navbar↓ -->
-    <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 mb-3 shadow-sm" style="background-color: #fff;z-index: 2">
-      <a class="navbar-brand" href="http://medalliance.com.tw/index.html"> <img src="../../images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
+    <nav id="navbarEquipments" class="navbar navbar-expand-lg bg-body-tertiary position-sticky top-0 px-3 shadow-sm" style="background-color: #fff;z-index: 1">
+      <a class="navbar-brand" href="./index.html"> <img src="./images/medalliance.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." /></a>
       <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,10 +40,10 @@
             <a class="nav-link px-3" aria-current="page" href="http://medalliance.com.tw/index.html">Home</a>
           </li>
           <li class="nav-item nav-pills">
-            <a class="nav-link px-3 " aria-current="page" href="http://medalliance.com.tw/telemedicine.html">Telemedicine</a>
+            <a class="nav-link px-3 active" aria-current="page" href="http://medalliance.com.tw/telemedicine.html">Telemedicine</a>
           </li>
           <li class="nav-item nav-pills dropdown" style="color: #595857">
-            <a class="nav-link px-3 active dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
+            <a class="nav-link px-3  dropdown-toggle" href="http://medalliance.com.tw/medical-equipments.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Medical Equipments </a>
             <ul class="dropdown-menu p-2" aria-labelledby="navbarDropdown" style="color: #595857;">
               <li>
                 <p class="dropdown-item fw-bold mb-0" style="color: #ff8500">Medical Devices And Equipments</p>
@@ -77,7 +70,7 @@
                 <a class="dropdown-item fw-bold" style="color: #ff8500" href="#">Medical Supplies</a>
               </li>
               <li>
-                <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
+                <a class="dropdown-item" href="./medical-equipments.html#Masks"><i class="bi bi-arrow-right-short"></i>Masks</a>
               </li>
               <li>
                 <a class="dropdown-item" href="http://medalliance.com.tw/medical-equipments.html#Gloves"><i class="bi bi-arrow-right-short"></i>Gloves</a>
@@ -90,8 +83,8 @@
               </li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link px-3" href="http://medalliance.com.tw/about-us.html">About</a>
+          <li class="nav-item nav-pills">
+            <a class="nav-link px-3 " href="http://medalliance.com.tw/about-us.html">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link px-3" href="mailto:support@medalliance.com.tw">Contact Us</a>
@@ -100,76 +93,50 @@
       </div>
     </nav>
     <!-- 1212 navbar↑ -->
-    <!-- content↓ -->
-    <div class="container-xxl" style="margin-bottom: 60px;">
-      <div class="row mb-3">
-        <div class="col-12 col-sm-6 mb-3">
-          <div style="--swiper-navigation-color: #fff; --swiper-pagination-color: #fff;" class="swiper mySwiper2 mb-3">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Patient_Analytics_Solutions/Rapid_Patient_Analyzer-01.jpg');"></div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Patient_Analytics_Solutions/Rapid_Patient_Analyzer-02.jpg');"></div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-button-next"></div>
-            <div class="swiper-button-prev"></div>
-          </div>
-          <div thumbsSlider="" class="swiper mySwiper ">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Patient_Analytics_Solutions/Rapid_Patient_Analyzer-01.jpg');"></div>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div>
-                  <div class="cardEquip" style="background-image: url('../../images/medical-equipments/Patient_Analytics_Solutions/Rapid_Patient_Analyzer-02.jpg');"></div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="container-xxl px-0" style="margin-bottom: 60px">
+      <img src="./images/about/hero-md-01.webp" alt="" class="w-100 d-md-none" />
+      <img src="./images/about/hero-xxl-01.png" alt="" class="w-100 d-none d-md-block" />
+    </div>
+    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 60px">
+      <h1 class="text-center text-medapri fw-bold">Global Solution Service Provider</h1>
+      <p>MedAlliance Inc. provides made-in-Taiwan medical PPE items and workflow based Solution-as-a-Service offerings with tailored designed medical IoT equipment and workflow assistant software to enhance the efficiency of mobile nursing, patient engagement, telemedicine, remote home care use case scenarios for healthcare provider in acute care, post-acute care, and long term care facilities.</p>
+    </div>
+    <div class="container-xl">
+      <img src="./images/about/about-01.png" alt="" class="w-100" />
+    </div>
+    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 60px">
+      <h1 class="fs-2 text-center text-medapri fw-bold">Serving Global Smart Healthcare Needs</h1>
+      <p>MedAlliance Inc. is your experienced partner in healthcare innovation. We bring practical know-how to the table, ready to deliver a diverse range of solutions that seamlessly integrate with smart healthcare.</p>
+    </div>
+    <div class="container-xxl" style="max-width: 1200px; margin-bottom: 60px">
+      <div class="row">
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
+          <img src="./images/about/Brain CT AI Analytic.webp" alt="" class="img-thumbnail border-0 mb-2" />
+          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #7a9ccc; border-radius: 999px">Brain CT AI Analytic</p>
         </div>
-        <div class="col-12 col-sm-6">
-          <h2 class="mb-3 fw-bold " style="color:#294076">Rapid Patient Analyzer</h2>
-          <div class="px-4" style="color:#595857">
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Full Spectrum Module</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Multi-Analytes Measurement</p>
-            <p class="textIndent"><i class="bi bi-caret-right-fill" style="font-size: 8pt;"></i>Micro Fluidics Technology</p>
-          </div>
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
+          <img src="./images/about/Handheld Ultrasound.webp" alt="" class="img-thumbnail border-0 mb-2" />
+          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #b1d24c; border-radius: 999px">Handheld Ultrasound</p>
         </div>
-      </div>
-      <div class="py-5" style="background-color: #2940760c;border-radius: 12px;">
-        <div class="row">
-          <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Full Spectrum Module</h3>
-            <p class="p-color-bk80">Flexibility in new parameter development.</p>
-          </div>
-          <div class="hrStyle-common mb-4"></div>
-          <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Multi-Analytes Measurement</h3>
-            <p class="p-color-bk80">Testing up to 16 markers in one time.</p>
-          </div>
-          <div class="hrStyle-common mb-4"></div>
-          <div class="col-10 mx-auto mb-2">
-            <h3 class="h-color-bk80 fw-bold fs-5">Micro Fluidics Technology</h3>
-            <p class="p-color-bk80">Only 60/140uL blood samples.</p>
-          </div>
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
+          <img src="./images/about/Pediatric Bone Age X Ray System.webp" alt="" class="img-thumbnail border-0 mb-2" />
+          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #f26472; border-radius: 999px">Pediatric Bone Age X Ray System</p>
+        </div>
+        <div class="col-6 col-sm-3 d-flex flex-column align-items-center">
+          <img src="./images/about/Portable X-Ray Machine.webp" alt="" class="img-thumbnail border-0 mb-2" />
+          <p class="px-4 py-1 text-center text-white fw-bold" style="background-color: #59bfbd; border-radius: 999px">Portable X-Ray Machine</p>
         </div>
       </div>
     </div>
-    <!-- content↑ -->
+    <div class="container-xl" style="margin-bottom: 72px">
+      <img src="./images/about/about-02.png" alt="" class="w-100" />
+    </div>
     <!-- footer↓  -->
     <footer class="container-fluid" style="background-color: #e9e9e9; padding-top: 80px; padding-bottom: 40px">
       <div class="container-xxl">
         <div class="d-flex flex-column flex-lg-row justify-content-center align-items-center border-bottom border-secondary p-3">
           <div class="mb-3 mb-lg-0 me-lg-3">
-            <img src="../../images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
+            <img src="./images/medalliance-col.svg" alt="MedAlliance MedTech Services: Transforming healthcare with telemedicine, mobile nursing, and hospital-at-home solutions. Partnering with Taiwan's finest medical device manufacturers for excellence in patient care." />
           </div>
           <div class="d-flex flex-column">
             <div class="d-flex flex-column flex-lg-row">
@@ -189,26 +156,11 @@
       </div>
     </footer>
     <!-- footer↑  -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-      var swiper = new Swiper(".mySwiper", {
-        spaceBetween: 10,
-        slidesPerView: 4,
-        freeMode: true,
-        watchSlidesProgress: true,
-      });
-      var swiper2 = new Swiper(".mySwiper2", {
-        spaceBetween: 10,
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-        thumbs: {
-          swiper: swiper,
-        },
-      });
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
